spacing fix

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -33,7 +33,7 @@ header, footer
 a
   color: white
 header img
-  margin-right: 1rem
+  margin-right: .5rem
 footer
   justify-content: space-between
 img
